--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,100;9..40,200;9..40,300;9..40,400;9..40,500;9..40,600;9..40,900;9..40,1000&family=Inter:wght@200;300;400;500;600;700;800;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,100;9..40,200;9..40,300;9..40,400;9..40,500;9..40,600;9..40,900;9..40,1000&family=Inter:wght@200;300;400;500;600;700;800;900&family=Monoton&display=swap"
       rel="stylesheet"
     />
 
@@ -40,7 +40,7 @@
             <a class="navigation-items" rel="noopener" href="#about-link"
               >About</a
             >
-            <a class="navigation-items" href="">Contact</a>
+            <a class="navigation-items" href="#contact-link">Contact</a>
           </div>
         </div>
       </nav>
@@ -96,7 +96,7 @@
       </p> -->
       </div>
 
-      <div class="section-divider"></div>
+      <div class="section-divider-h"></div>
 
       <div class="section-2 box no-tbp">
         <a id="project-link"></a>
@@ -141,7 +141,11 @@
                   >WEBSITE URL</a
                 >
                 <span class="accent-static">|</span>
-                <a class="caption-items" href="google.com">SOURCE CODE</a>
+                <a
+                  class="caption-items"
+                  href="https://github.com/Lavertsss/Practice-Projects/tree/main/JS/JS%20Notes"
+                  >SOURCE CODE</a
+                >
                 <span class="accent-static">|</span>
                 <a class="caption-items">PASSCODE: 144</a>
               </div>
@@ -177,20 +181,22 @@
                 </div>
               </div>
               <div class="frame-caption text-right">
-                <a
-                  class="caption-items"
-                  href="https://notesofamindlessmuseum.com/"
+                <a class="caption-items" href="https://mindlessmuseum.com/"
                   >WEBSITE URL</a
                 >
                 <span class="accent-static">|</span>
-                <a class="caption-items" href="google.com">SOURCE CODE</a>
+                <a
+                  class="caption-items"
+                  href="https://github.com/Lavertsss/Practice-Projects/tree/main/Old%20Portfolio"
+                  >SOURCE CODE</a
+                >
                 <span class="accent-static">|</span>
                 <a class="caption-items">HOVER EFFECT</a>
               </div>
             </div>
           </div>
 
-          <div class="section-divider"></div>
+          <div class="section-divider-h"></div>
           <a id="about-link"></a>
         </div>
       </div>
@@ -200,22 +206,105 @@
           <h1 class="title center-text" style="color: rgb(255, 137, 46)">
             About Me
           </h1>
-          <p class="about-text">
-            <!-- My name is Joseph Maddox, presently a self-taught web developer. I'm
+          <div class="about-flex">
+            <p class="about-text">
+              <!-- My name is Joseph Maddox, presently a self-taught web developer. I'm
             currently in college for my bachelor's in Computer Science with a
             major in Information Technology. I am sickly obsessed with [adult
             swim] content. -->
-            I'm Joseph Maddox, a dedicated web developer currently pursuing a
-            Bachelor's in Computer Science with a focus on Information
-            Technology. Passionate about crafting digital experiences, I thrive
-            in the world of coding and creativity. Beyond the realms of
-            technology, I find immense inspiration in the unconventional
-            storytelling and avant-garde animation of [adult swim]. This passion
-            fuels my innovative approach to web development, where I merge
-            technical expertise with a flair for the imaginative. Welcome to my
-            portfolio—where technical precision meets the boundless realms of
-            creative exploration.
-          </p>
+              I'm Joseph Maddox, a dedicated web developer currently pursuing a
+              Bachelor's in Computer Science with a focus on Information
+              Technology. Passionate about crafting digital experiences, I
+              thrive in the world of coding and creativity. Beyond the realms of
+              technology, I find immense inspiration in the unconventional
+              storytelling and avant-garde animation of [adult swim]. This
+              passion fuels my innovative approach to web development, where I
+              merge technical expertise with a flair for the imaginative.
+              Welcome to my portfolio—where technical precision meets the
+              boundless realms of creative exploration.
+            </p>
+            <div class="section-divider-v"></div>
+            <div class="stack-references">
+              <p class="title">Languages</p>
+              <img
+                class="stack-img"
+                src="https://raw.githubusercontent.com/Lavertsss/Assets/9a080a368a7aa14cb6c59cf152c209321b6b1dcf/SVG/css-3.svg"
+                height="15%"
+                width="15%"
+              />
+              <img
+                class="stack-img"
+                src="https://raw.githubusercontent.com/Lavertsss/Assets/9a080a368a7aa14cb6c59cf152c209321b6b1dcf/SVG/html-5.svg"
+                height="15%"
+                width="15%"
+              />
+              <img
+                class="stack-img"
+                src="https://raw.githubusercontent.com/Lavertsss/Assets/9a080a368a7aa14cb6c59cf152c209321b6b1dcf/SVG/javascript.svg"
+                height="15%"
+                width="15%"
+              />
+              <img
+                class="stack-img"
+                src="https://raw.githubusercontent.com/Lavertsss/Assets/9a080a368a7aa14cb6c59cf152c209321b6b1dcf/SVG/python.svg"
+                height="15%"
+                width="15%"
+              />
+              <img
+                class="stack-img"
+                src="https://raw.githubusercontent.com/Lavertsss/Assets/fd6b99531613668ced52adb1b9ff9d13615393ec/SVG/typescript-icon.svg"
+                height="15%"
+                width="15%"
+              />
+
+              <p class="title">Frameworks</p>
+              <img
+                class="stack-img"
+                src="https://raw.githubusercontent.com/Lavertsss/Assets/fd6b99531613668ced52adb1b9ff9d13615393ec/SVG/react.svg"
+                height="15%"
+                width="15%"
+              />
+              <img
+                class="stack-img"
+                src="https://raw.githubusercontent.com/Lavertsss/Assets/f6569f60a71003dbd5b4d9288dee5c4d3aeb0952/SVG/bootstrap.svg"
+                height="15%"
+                width="15%"
+              />
+              <img
+                class="stack-img"
+                src="https://raw.githubusercontent.com/Lavertsss/Assets/f6569f60a71003dbd5b4d9288dee5c4d3aeb0952/SVG/sass.svg"
+                height="15%"
+                width="15%"
+              />
+              <p class="title">Tools</p>
+              <img
+                class="stack-img"
+                src="https://raw.githubusercontent.com/Lavertsss/Assets/fd6b99531613668ced52adb1b9ff9d13615393ec/SVG/github-icon.svg"
+                height="15%"
+                width="15%"
+              />
+              <img
+                class="stack-img"
+                src="https://raw.githubusercontent.com/Lavertsss/Assets/f6569f60a71003dbd5b4d9288dee5c4d3aeb0952/SVG/git-icon.svg"
+                height="15%"
+                width="15%"
+              />
+              <img
+                class="stack-img"
+                src="https://raw.githubusercontent.com/Lavertsss/Assets/f6569f60a71003dbd5b4d9288dee5c4d3aeb0952/SVG/figma.svg"
+                height="15%"
+                width="15%"
+              />
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="section-divider-h"></div>
+      <div class="section-4 box">
+        <a id="contact-link"></a>
+        <div class="contact-wrapper">
+          <p class="title">PRESS IT!</p>
+          <div class="orange-button"></div>
         </div>
       </div>
     </div>
