Onto Mobile Repsonsiveness

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -34,13 +34,15 @@
             >
           </div>
           <div class="navigation-bar box flex-end">
+            <a class="navigation-items" href="https://github.com/Lavertsss"
+              >Github</a
+            >
             <a class="navigation-items" rel="noopener" href="#project-link"
               >Projects</a
             >
             <a class="navigation-items" rel="noopener" href="#about-link"
               >About</a
             >
-            <a class="navigation-items" href="#contact-link">Contact</a>
           </div>
         </div>
       </nav>
@@ -84,10 +86,10 @@
         </div>
 
         <div class="section-image-wrapper">
-          <div id="blob">
+          <div id="blob" onclick="location.href='#contact-link';">
             <!-- <script src="lottie.js"></script> -->
           </div>
-          <p class="center-text">HOVER FOR TEXT</p>
+          <p class="contact-text center-text">Contact Me</p>
         </div>
 
         <!-- <p class="scroll bob">
@@ -212,16 +214,34 @@
             currently in college for my bachelor's in Computer Science with a
             major in Information Technology. I am sickly obsessed with [adult
             swim] content. -->
-              I'm Joseph Maddox, a dedicated web developer currently pursuing a
-              Bachelor's in Computer Science with a focus on Information
-              Technology. Passionate about crafting digital experiences, I
-              thrive in the world of coding and creativity. Beyond the realms of
-              technology, I find immense inspiration in the unconventional
-              storytelling and avant-garde animation of [adult swim]. This
-              passion fuels my innovative approach to web development, where I
-              merge technical expertise with a flair for the imaginative.
-              Welcome to my portfolio—where technical precision meets the
-              boundless realms of creative exploration.
+              I'm Joseph Maddox<span class="accent-static">,</span> a dedicated
+              web developer currently pursuing a Bachelor's in Computer Science
+              with a focus on Information Technology<span class="accent-static"
+                >.</span
+              >
+              Passionate about crafting digital experiences<span
+                class="accent-static"
+                >,</span
+              >
+              I thrive in the world of coding and creativity<span
+                class="accent-static"
+                >.</span
+              >
+              Beyond the realms of technology<span class="accent-static"
+                >,</span
+              >
+              I find inspiration in the unconventional storytelling and
+              avant-garde animation of [adult swim]<span class="accent-static"
+                >.</span
+              >
+              This passion fuels my innovative approach to web development<span
+                class="accent-static"
+                >,</span
+              >
+              where I merge technical expertise with a flair for the
+              imaginative<span class="accent-static">.</span> Welcome to my
+              portfolio—where technical precision meets the boundless realms of
+              creative exploration<span class="accent-static">.</span>
             </p>
             <div class="section-divider-v"></div>
             <div class="stack-references">
@@ -303,8 +323,11 @@
       <div class="section-4 box">
         <a id="contact-link"></a>
         <div class="contact-wrapper">
-          <p class="title">PRESS IT!</p>
-          <div class="orange-button"></div>
+          <p class="title">PRESS IT<span class="accent-static">!</span></p>
+          <div
+            class="orange-button"
+            onclick="location.href='https://mail.google.com/mail/u/0/#inbox?compose=xQTrpMksNJCzwpBkgBcsdhzdzMsgzkdLXdlJFqSdJTjFZjZmRQKxBmLlHLKlwDndTfhWSMpZNkwFZxpgWtFFsskfDgkGXgLznGXMGJqVKKsRQFDqwkdNt';"
+          ></div>
         </div>
       </div>
     </div>
