--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -326,7 +326,7 @@
           <p class="title">PRESS IT<span class="accent-static">!</span></p>
           <div
             class="orange-button"
-            onclick="location.href='https://mail.google.com/mail/u/0/#inbox?compose=xQTrpMksNJCzwpBkgBcsdhzdzMsgzkdLXdlJFqSdJTjFZjZmRQKxBmLlHLKlwDndTfhWSMpZNkwFZxpgWtFFsskfDgkGXgLznGXMGJqVKKsRQFDqwkdNt';"
+            onclick="javascript:window.open('https://mail.google.com/mail/u/0/#inbox?compose=xQTrpMksNJCzwpBkgBcsdhzdzMsgzkdLXdlJFqSdJTjFZjZmRQKxBmLlHLKlwDndTfhWSMpZNkwFZxpgWtFFsskfDgkGXgLznGXMGJqVKKsRQFDqwkdNt')"
           ></div>
         </div>
       </div>
