--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -34,7 +34,10 @@
             >
           </div>
           <div class="navigation-bar box flex-end">
-            <a class="navigation-items" href="https://github.com/Lavertsss"
+            <a
+              class="navigation-items"
+              target="_blank"
+              href="https://github.com/Lavertsss"
               >Github</a
             >
             <a class="navigation-items" rel="noopener" href="#project-link"
@@ -333,3 +336,4 @@
     </div>
   </body>
 </html>
+s
