--- a/Client_MIndless/index.html
+++ b/Client_MIndless/index.html
@@ -8,8 +8,11 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=League+Gothic&family=Passion+One:wght@400;700;900&family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=League+Gothic&family=Passion+One:wght@400;700;900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=League+Gothic&family=Passion+One:wght@400;700;900&family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
+        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=League+Gothic&family=Passion+One:wght@400;700;900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -24,25 +27,82 @@
                         <a class="nav-item">asdasdasd</a>
                     </div>
                 </div>
-                <div class="content box-padding">
+                <div class="content content-padding">
                     <p class="title">MINDLESS MUSEUM</p>
-                    <p class="sub-title">An asylum of projects that enlighten the mind and sharpen the senses.</p>
+                    <p class="sub-title">An asylum of projects that enlighten the mind and sharpen the senses. Lorem
+                        ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                        aliquip ex ea commodo consequat.</p>
+                    <div class="button">
+                        <button class="contact-button"><a class="contact-link"
+                                href="https://supersimpledev.github.io/references/html-css-reference.pdf"
+                                target="_blank">CONTACT
+                                ME</a></button>
+                    </div>
 
                 </div>
             </div>
         </div>
-        <div class="divider"></div>
-        <div class="section-2 box-padding ">
-            <h1 class="works-header">WORKS</h1>
-            <div class="project-border" tabindex="0">
-                <div class="project-wrapper"></div>
+        <!-- <div class="divider"></div> -->
+        <div class="section-2 project-padding">
+            <h1 class="works-header">THE PROJECTS</h1>
+            <div class="panel">
+                <div class="project-border" tabindex="0">
+                    <div class="project-wrapper">
+                        <iframe width="100%" height="100%"
+                            src="https://www.youtube.com/embed/xsjviB1CZvk?si=rx9a4qFrjWh6jomd"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                            allowfullscreen></iframe>
+                    </div>
+                </div>
+                <div class="hidden-text">
+                    <p class="works-title">The ORIGINAL Fortnite<a class="link" href="mindlessmuseum.com">Page Link</a>
+                    </p>
+                    <p class="works-caption">Welcome to the suburbs of Boston Massachesuets. Today we shall be exploring
+                        the dark reaches of suboptimal gameplay and what not to do (courtesies of Joshua for providing
+                        the bad gameplay we have clipped and prepped to show you.)</p>
+                </div>
             </div>
-            <div class="project-border" tabindex="0">
-                <div class="project-wrapper"></div>
+
+            <div class="panel">
+                <div class="project-border" tabindex="0">
+                    <div class="project-wrapper">
+                        <iframe width="100%" height="100%"
+                            src="https://www.youtube.com/embed/_r-yZYENJ1o?si=2I7kqH8PRosAW75W"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                            allowfullscreen></iframe>
+                    </div>
+                </div>
+                <div class="hidden-text">
+                    <p class="works-title">The ORIGINAL Fortnite<a class="link" href="mindlessmuseum.com">Page Link</a>
+                    </p>
+                    <p class="works-caption">Welcome to the suburbs of Boston Massachesuets. Today we shall be exploring
+                        the dark reaches of suboptimal gameplay and what not to do (courtesies of Joshua for providing
+                        the bad gameplay we have clipped and prepped to show you.)</p>
+                </div>
             </div>
-            <div class="project-border" tabindex="0">
-                <div class="project-wrapper"></div>
+
+            <div class="panel">
+                <div class="project-border" tabindex="0">
+                    <div class="project-wrapper">
+                        <iframe width="100%" height="100%"
+                            src="https://www.youtube.com/embed/w6fSNYCuvl0?si=H4pnATvZFYKUjhq4"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                            allowfullscreen></iframe>
+                    </div>
+                </div>
+                <div class="hidden-text">
+                    <p class="works-title">The ORIGINAL Fortnite<a class="link" href="mindlessmuseum.com">Page Link</a>
+                    </p>
+                    <p class="works-caption">Welcome to the suburbs of Boston Massachesuets. Today we shall be exploring
+                        the dark reaches of suboptimal gameplay and what not to do (courtesies of Joshua for providing
+                        the bad gameplay we have clipped and prepped to show you.)</p>
+                </div>
             </div>
+
             <div class="project-border" tabindex="0">
                 <div class="project-wrapper"></div>
             </div>
