--- a/Client_MIndless/index.html
+++ b/Client_MIndless/index.html
@@ -13,21 +13,38 @@
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=League+Gothic&family=Passion+One:wght@400;700;900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 
 <body>
     <div class="layout-flex">
         <div class="section-1 ">
             <div class="section-1-layout ">
-                <div class="navigation-wrapper">
-                    <div class="navigation-container">
-                        <a class="nav-item">asdasdasd</a>
-                        <a class="nav-item">asdasdasd</a>
-                        <a class="nav-item">asdasdasd</a>
-                        <a class="nav-item">asdasdasd</a>
-                    </div>
+                <div class="navigation-container">
+                    <a class="nav-item" href="https://github.com/Lavertsss" target="_blank">Github</a>
+                    <a class="nav-item" href="https://github.com/Lavertsss" target="_blank">Contact</a>
+                    <a class="nav-item" href="https://github.com/Lavertsss" target="_blank">LinkedIn</a>
+                    <a class="nav-item"><span class="material-symbols-outlined">
+                            search
+                        </span></a>
                 </div>
                 <div class="content content-padding">
+                    <p class="title">MINDLESS MUSEUM</p>
+                    <p class="sub-title">An asylum of projects that enlighten the mind and sharpen the senses. Lorem
+                        ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                        aliquip ex ea commodo consequat.</p>
+                    <div class="button">
+                        <button class="contact-button"><a class="contact-link"
+                                href="https://supersimpledev.github.io/references/html-css-reference.pdf"
+                                target="_blank">CONTACT
+                                ME</a></button>
+                    </div>
+
+                </div>
+
+                <div class="content content-padding content-right">
                     <p class="title">MINDLESS MUSEUM</p>
                     <p class="sub-title">An asylum of projects that enlighten the mind and sharpen the senses. Lorem
                         ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
@@ -57,7 +74,7 @@
                     </div>
                 </div>
                 <div class="hidden-text">
-                    <p class="works-title">The ORIGINAL Fortnite<a class="link" href="mindlessmuseum.com">Page Link</a>
+                    <p class="works-title">iShowSpeed GAY?!<a class="link" href="mindlessmuseum.com">Page Link</a>
                     </p>
                     <p class="works-caption">Welcome to the suburbs of Boston Massachesuets. Today we shall be exploring
                         the dark reaches of suboptimal gameplay and what not to do (courtesies of Joshua for providing
@@ -76,7 +93,7 @@
                     </div>
                 </div>
                 <div class="hidden-text">
-                    <p class="works-title">The ORIGINAL Fortnite<a class="link" href="mindlessmuseum.com">Page Link</a>
+                    <p class="works-title">Most VIEWED Clips<a class="link" href="mindlessmuseum.com">Page Link</a>
                     </p>
                     <p class="works-caption">Welcome to the suburbs of Boston Massachesuets. Today we shall be exploring
                         the dark reaches of suboptimal gameplay and what not to do (courtesies of Joshua for providing
@@ -95,7 +112,7 @@
                     </div>
                 </div>
                 <div class="hidden-text">
-                    <p class="works-title">The ORIGINAL Fortnite<a class="link" href="mindlessmuseum.com">Page Link</a>
+                    <p class="works-title">I Have A Problem<a class="link" href="mindlessmuseum.com">Page Link</a>
                     </p>
                     <p class="works-caption">Welcome to the suburbs of Boston Massachesuets. Today we shall be exploring
                         the dark reaches of suboptimal gameplay and what not to do (courtesies of Joshua for providing
