--- a/Client_MIndless/index.html
+++ b/Client_MIndless/index.html
@@ -45,16 +45,17 @@
                 </div>
 
                 <div class="content content-padding content-right">
-                    <p class="title">MINDLESS MUSEUM</p>
+                    <p class="title">ME, ME, AND MORE ME</p>
                     <p class="sub-title">An asylum of projects that enlighten the mind and sharpen the senses. Lorem
                         ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                         dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                         aliquip ex ea commodo consequat.</p>
                     <div class="button">
+                        <button class="token">ATLANTA, GA</button>
+                        <button class="token">FRONT-END WEB DEVELOPER</button>
                         <button class="contact-button"><a class="contact-link"
                                 href="https://supersimpledev.github.io/references/html-css-reference.pdf"
-                                target="_blank">CONTACT
-                                ME</a></button>
+                                target="_blank">LINKEDIN</a></button>
                     </div>
 
                 </div>
@@ -118,13 +119,6 @@
                         the dark reaches of suboptimal gameplay and what not to do (courtesies of Joshua for providing
                         the bad gameplay we have clipped and prepped to show you.)</p>
                 </div>
-            </div>
-
-            <div class="project-border" tabindex="0">
-                <div class="project-wrapper"></div>
-            </div>
-            <div class="project-border" tabindex="0">
-                <div class="project-wrapper"></div>
             </div>
         </div>
     </div>
