--- a/Client_MIndless/index.html
+++ b/Client_MIndless/index.html
@@ -10,6 +10,8 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link
         href="https://fonts.googleapis.com/css2?family=League+Gothic&family=Passion+One:wght@400;700;900&family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
         rel="stylesheet">
@@ -25,8 +27,11 @@
             <div class="section-1-layout ">
                 <div class="navigation-container">
                     <a class="nav-item" href="https://github.com/Lavertsss" target="_blank">Github</a>
-                    <a class="nav-item" href="https://github.com/Lavertsss" target="_blank">Contact</a>
-                    <a class="nav-item" href="https://github.com/Lavertsss" target="_blank">LinkedIn</a>
+                    <a class="nav-item"
+                        href="https://mail.google.com/mail/u/0/#inbox?compose=SxfkdtCLpBXJRJDsqNchjCSRpZvMBWQjLFdQNCdgRXxbDZWFdZtBjrCgsfBTkDhkbZKbdHFVbSkhgFpgVdbPJjQJSgwZCWKGqtrwTXdzsBCpGXsdpvV"
+                        target="_blank">Contact</a>
+                    <a class="nav-item" href="https://www.linkedin.com/in/joseph-maddox-7032b3254/"
+                        target="_blank">LinkedIn</a>
                     <div class="nav-search"><span class="material-symbols-outlined">
                             search
                         </span><input class="search-bar" id="search-id" type="text" placeholder=""
@@ -34,6 +39,7 @@
                         <!-- "Looking for something? -->
                     </div>
                 </div>
+
                 <div class="content content-padding">
                     <p class="title">MINDLESS MUSEUM</p>
                     <p class="sub-title">An asylum of projects that enlighten the mind and sharpen the senses. Lorem
@@ -46,7 +52,6 @@
                                 target="_blank">CONTACT
                                 ME</a></button>
                     </div>
-
                 </div>
 
                 <div class="content content-padding content-right">
@@ -62,8 +67,25 @@
                                 href="https://supersimpledev.github.io/references/html-css-reference.pdf"
                                 target="_blank">LINKEDIN</a></button>
                     </div>
-
                 </div>
+
+                <div class="technology">
+                    <div class="content content-padding">
+                        <p class="title">TECHNOLOGIES</p>
+                        <p class="sub-title">An asylum of projects that enlighten the mind and sharpen the senses. Lorem
+                            ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                            labore et
+                            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+                            ut
+                            aliquip ex ea commodo consequat.</p>
+
+                    </div>
+
+                    <div class="tech-stack-arrow content-padding">
+                        <p class="right-arrow">⬎</p>
+                    </div>
+                </div>
+
             </div>
         </div>
         <!-- <div class="divider"></div> -->
@@ -91,7 +113,7 @@
             <div class="panel">
                 <div class="project-border" tabindex="0">
                     <div class="project-wrapper">
-                        <iframe width="100%" height="100%"
+                        <iframe width="100%" height="100%" x
                             src="https://www.youtube.com/embed/_r-yZYENJ1o?si=2I7kqH8PRosAW75W"
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -149,7 +171,3 @@
 </body>
 
 </html>
-<iframe width="auto" height="auto" src="https://www.youtube.com/embed/EFc_nBgkpg0?si=_WJpLaFDgVtwdb2O"
-    title="YouTube video player" frameborder="0"
-    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-    allowfullscreen></iframe>
