--- a/Client_MIndless/index.html
+++ b/Client_MIndless/index.html
@@ -86,6 +86,10 @@
                     </div>
                 </div>
 
+                <div class="content content-padding">
+                    <div class="technology-stack">asdas</div>
+                </div>
+
             </div>
         </div>
         <!-- <div class="divider"></div> -->
