--- a/Client_MIndless/index.html
+++ b/Client_MIndless/index.html
@@ -87,7 +87,7 @@
                 </div>
 
                 <div class="content content-padding">
-                    <div class="technology-stack">asdas</div>
+                    <div class="technology-stack content-padding"></div>
                 </div>
 
             </div>
