--- a/Client_MIndless/index.html
+++ b/Client_MIndless/index.html
@@ -87,18 +87,37 @@
                 </div>
 
                 <div class="content content-padding">
-                    <div class="technology-stack content-padding"></div>
+                    <div class="technology-stack-container content-padding">
+                        <p class="tech-title"></p>
+                        <p class="tech-stack-title">FRAMEWORKS</p>
+                        <div class="tech-stack-wrapper">
+                            <div class="tech-stack">
+                                <div class="stack-item">HTML</div>
+                                <div class="stack-item">CSS</div>
+                                <div class="stack-item">JAVASCRIPT</div>
+                                <div class="stack-item">TYPESCRIPT </div>
+                                <div class="stack-item">PYTHON</div>
+
+                            </div>
+                            <div class="divider"></div>
+                            <div class="tech-stack">
+                                <div class="stack-item">REACT</div>
+                                <div class="stack-item">BOOTSTRAP</div>
+                                <div class="stack-item">SASS</div>
+                            </div>
+                        </div>
+                        <p class="tech-stack-title u-down">LANGUAGES</p>
+                    </div>
                 </div>
 
             </div>
         </div>
-        <!-- <div class="divider"></div> -->
         <div class="section-2 project-padding">
             <h1 class="works-header">THE PROJECTS</h1>
             <div class="panel">
                 <div class="project-border" tabindex="0">
                     <div class="project-wrapper">
-                        <iframe width="100%" height="100%"
+                        <iframe width="100%" height="100%" class="project-radius"
                             src="https://www.youtube.com/embed/xsjviB1CZvk?si=rx9a4qFrjWh6jomd"
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -117,7 +136,7 @@
             <div class="panel">
                 <div class="project-border" tabindex="0">
                     <div class="project-wrapper">
-                        <iframe width="100%" height="100%" x
+                        <iframe width="100%" height="100%" class="project-radius"
                             src="https://www.youtube.com/embed/_r-yZYENJ1o?si=2I7kqH8PRosAW75W"
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -136,7 +155,7 @@
             <div class="panel">
                 <div class="project-border" tabindex="0">
                     <div class="project-wrapper">
-                        <iframe width="100%" height="100%"
+                        <iframe width="100%" height="100%" class="project-radius"
                             src="https://www.youtube.com/embed/w6fSNYCuvl0?si=H4pnATvZFYKUjhq4"
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -155,7 +174,7 @@
             <div class="panel">
                 <div class="project-border" tabindex="0">
                     <div class="project-wrapper">
-                        <iframe width="100%" height="100%"
+                        <iframe width="100%" height="100%" class="project-radius"
                             src="https://www.youtube.com/embed/EFc_nBgkpg0?si=_WJpLaFDgVtwdb2O"
                             title="YouTube video player" frameborder="0"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
