--- a/Client_MIndless/index.html
+++ b/Client_MIndless/index.html
@@ -26,6 +26,7 @@
         <div class="section-1 ">
             <div class="section-1-layout ">
                 <div class="navigation-container">
+                    <span class="mobile"><a class="nav-item item-focus">...</a></span>
                     <a class="nav-item" href="https://github.com/Lavertsss" target="_blank">Github</a>
                     <a class="nav-item"
                         href="https://mail.google.com/mail/u/0/#inbox?compose=SxfkdtCLpBXJRJDsqNchjCSRpZvMBWQjLFdQNCdgRXxbDZWFdZtBjrCgsfBTkDhkbZKbdHFVbSkhgFpgVdbPJjQJSgwZCWKGqtrwTXdzsBCpGXsdpvV"
@@ -40,38 +41,59 @@
                     </div>
                 </div>
 
-                <div class="content content-padding">
-                    <p class="title">MINDLESS MUSEUM</p>
-                    <p class="sub-title">An asylum of projects that enlighten the mind and sharpen the senses. Lorem
-                        ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                        aliquip ex ea commodo consequat.</p>
-                    <div class="button">
-                        <button class="contact-button"><a class="contact-link"
-                                href="https://supersimpledev.github.io/references/html-css-reference.pdf"
-                                target="_blank">CONTACT
-                                ME</a></button>
+                <div class="content-container">
+                    <div class="content content-header">
+                        <p class="title">MINDLESS MUSEUM</p>
+                        <p class="sub-title">An asylum of projects that enlighten the mind and sharpen the senses. Lorem
+                            ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                            labore et
+                            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+                            ut
+                            aliquip ex ea commodo consequat.</p>
+                        <div class="button">
+                            <button class="contact-button"><a class="contact-link"
+                                    href="https://supersimpledev.github.io/references/html-css-reference.pdf"
+                                    target="_blank">CONTACT
+                                    ME</a></button>
+                        </div>
+                    </div>
+                    <div class="tech-stack-arrow">
+                        <img class="right-arrow" width="100%"
+                            src="https://raw.githubusercontent.com/Lavertsss/Assets/main/PHOTOSHOP%20ASSETS/new-and-improved-1-right.png">
                     </div>
                 </div>
 
-                <div class="content content-padding content-right">
-                    <p class="title">ME, ME, AND MORE ME</p>
-                    <p class="sub-title">An asylum of projects that enlighten the mind and sharpen the senses. Lorem
-                        ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                        aliquip ex ea commodo consequat.</p>
-                    <div class="button">
-                        <button class="token">ATLANTA, GA</button>
-                        <button class="token">FRONT-END WEB DEVELOPER</button>
-                        <button class="contact-button"><a class="contact-link"
-                                href="https://supersimpledev.github.io/references/html-css-reference.pdf"
-                                target="_blank">LINKEDIN</a></button>
+                <div class="content-container">
+                    <div class="tech-stack-arrow">
+                        <img class="right-arrow" width="100%"
+                            src="https://raw.githubusercontent.com/Lavertsss/Assets/main/PHOTOSHOP%20ASSETS/new-and-improved-1.png">
+                    </div>
+                    <div class="content content-padding content-right">
+
+                        <p class="title">A LITTLE ME</p>
+                        <p class="sub-title">An asylum of projects that enlighten the mind and sharpen the senses. Lorem
+                            ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                            labore et
+                            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+                            ut
+                            aliquip ex ea commodo consequat.</p>
+                        <div class="button">
+                            <button class="button-token">
+                                <p class="token">ATLANTA, GA</p>
+                            </button>
+                            <button class="button-token">
+                                <p class="token">FRONT-END WEB DEVELOPER</p>
+                            </button>
+                            <button class="contact-button"><a class="contact-link"
+                                    href="https://supersimpledev.github.io/references/html-css-reference.pdf"
+                                    target="_blank">LINKEDIN</a></button>
+                        </div>
                     </div>
                 </div>
 
-                <div class="technology">
+                <div class="content-container">
                     <div class="content content-padding">
-                        <p class="title">TECHNOLOGIES</p>
+                        <p class="title">TECHNO<span class="mobile-break">-</span>LOGIES</p>
                         <p class="sub-title">An asylum of projects that enlighten the mind and sharpen the senses. Lorem
                             ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                             labore et
@@ -81,8 +103,9 @@
 
                     </div>
 
-                    <div class="tech-stack-arrow content-padding">
-                        <p class="right-arrow">⬎</p>
+                    <div class="tech-stack-arrow">
+                        <img class="right-arrow" width="100%"
+                            src="https://raw.githubusercontent.com/Lavertsss/Assets/main/PHOTOSHOP%20ASSETS/new-and-improved-1-right.png">
                     </div>
                 </div>
 
@@ -92,18 +115,60 @@
                         <p class="tech-stack-title">FRAMEWORKS</p>
                         <div class="tech-stack-wrapper">
                             <div class="tech-stack">
-                                <div class="stack-item">HTML</div>
-                                <div class="stack-item">CSS</div>
-                                <div class="stack-item">JAVASCRIPT</div>
-                                <div class="stack-item">TYPESCRIPT </div>
-                                <div class="stack-item">PYTHON</div>
-
+                                <div class="stack-item">
+                                    <img class="stack-image"
+                                        src="https://raw.githubusercontent.com/Lavertsss/Assets/main/PHOTOSHOP ASSETS/HTML-LOGO.jpg"
+                                        height="100%" width="100%">
+                                    <p class="stack-item-text">HTML</p>
+                                </div>
+                                <div class="stack-item">
+                                    <img class="stack-image"
+                                        src="https://raw.githubusercontent.com/Lavertsss/Assets/main/PHOTOSHOP%20ASSETS/CSS.jpg"
+                                        height="100%" width="100%">
+                                    <p class="stack-item-text">CSS</p>
+                                </div>
+                                <div class="stack-item">
+                                    <img class="stack-image"
+                                        src="https://raw.githubusercontent.com/Lavertsss/Assets/main/PHOTOSHOP%20ASSETS/JS-LOGO.jpg"
+                                        height="100%" width="100%">
+                                    <p class="stack-item-text">JAVASCRIPT</p>
+                                </div>
+                                <div class="stack-item">
+                                    <img class="stack-image"
+                                        src="https://raw.githubusercontent.com/Lavertsss/Assets/main/PHOTOSHOP%20ASSETS/TS-LOGO.jpg"
+                                        height="100%" width="100%">
+                                    <p class="stack-item-text">TYPESCRIPT</p>
+                                </div>
+                                <div class="stack-item">
+                                    <img class="stack-image"
+                                        src="https://raw.githubusercontent.com/Lavertsss/Assets/main/PHOTOSHOP%20ASSETS/PYTHON-LOGO.jpg"
+                                        height="100%" width="100%">
+                                    <p class="stack-item-text">PYTHON</p>
+                                </div>
                             </div>
+
                             <div class="divider"></div>
+
                             <div class="tech-stack">
-                                <div class="stack-item">REACT</div>
-                                <div class="stack-item">BOOTSTRAP</div>
-                                <div class="stack-item">SASS</div>
+                                <div class="stack-item">
+                                    <img class="stack-image"
+                                        src="https://raw.githubusercontent.com/Lavertsss/Assets/main/PHOTOSHOP%20ASSETS/REACT-LOGO.jpg"
+                                        height="100%" width="100%">
+                                    <p class="stack-item-text">REACT</p>
+                                </div>
+                                <div class="stack-item">
+                                    <img class="stack-image"
+                                        src="https://raw.githubusercontent.com/Lavertsss/Assets/main/PHOTOSHOP%20ASSETS/BS-LOGO.jpg"
+                                        height="100%" width="100%">
+                                    <p class="stack-item-text">BOOTSTRAP</p>
+                                </div>
+                                <div class="stack-item">
+                                    <img class="stack-image"
+                                        src="https://raw.githubusercontent.com/Lavertsss/Assets/main/PHOTOSHOP%20ASSETS/SASS-LOGO.jpg"
+                                        height="100%" width="100%">
+                                    <p class="stack-item-text">SASS</p>
+                                </div>
+
                             </div>
                         </div>
                         <p class="tech-stack-title u-down">LANGUAGES</p>
